src/objects/Platform_Events_Button__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform_Events_Page__c</fullName>
        <label>Platform Events Page</label>
        <referenceTo>Platform_Events_Page__c</referenceTo>
        <relationshipLabel>Platform Events Buttons</relationshipLabel>
        <relationshipName>Platform_Event_Buttons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Platform Events Button</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Platform Event Button Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Events Buttons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>